<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_language"
        android:title="PT/EN"
        app:actionLayout="@layout/menu_language_item"
        android:textColor="@android:color/white"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout"
        android:icon="@android:drawable/ic_lock_power_off"
        app:iconTint="@android:color/white"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_add"
        android:title="@string/add"
        android:icon="@drawable/ic_menu_hamburger"
        app:iconTint="@android:color/white"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_add_movie"
                android:title="@string/add_movie" />
            <item
                android:id="@+id/menu_add_person"
                android:title="@string/add_person" />
        </menu>
    </item>
</menu>
